begins updating content

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "v2.thewelcomingmusic.com",
-  "description": "website for Asheville NC rock & metal band The Welcoming",
+  "name": "zillicoah",
+  "description": "website for Asheville NC rock band Zillicoah",
   "author": "James Ferrell",
   "version": "1.0.0",
   "scripts": {
