--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "The Welcoming",
-  "short_name": "The Welcoming",
+  "name": "Zillicoah",
+  "short_name": "Zillicoah",
   "background_color": "#0F0819",
   "theme_color": "#0F0819"
 }
